Corrected js classes, spacing and RWD in layout editor

--- a/public_html/layouts/basic/styles/_Style.scss
+++ b/public_html/layouts/basic/styles/_Style.scss
@@ -2526,13 +2526,6 @@ html, body, .o-base-container {
 	}
 }
 
-.sortTableUl {
-	list-style-type: none;
-	float: left;
-	min-height: 1px;
-	padding: 2px;
-}
-
 .dashboardHeading {
 	hr {
 		margin-top: -2px;
